force-app/main/default/objects/Desgloce_de_Gastos__c/Desgloce_de_Gastos__c.object-meta.xml
<CustomObject>
    <label>Desgloce de Gastos</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Gasto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Desgloce de Gastos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>