force-app/main/default/objects/Desgloce_de_Gastos__c/fields/Tipo_de_Gasto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Gasto__c</fullName>
    <label>Tipo de Gasto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alimentos</fullName>
            </value>
            <value>
                <fullName>Estacionamiento</fullName>
            </value>
            <value>
                <fullName>Gasolina</fullName>
            </value>
            <value>
                <fullName>Hoteles</fullName>
            </value>
            <value>
                <fullName>Mantto. o equipo de transporte</fullName>
            </value>
            <value>
                <fullName>Papelería</fullName>
            </value>
            <value>
                <fullName>Peajes o Casetas</fullName>
            </value>
            <value>
                <fullName>Servicio de Internet</fullName>
            </value>
            <value>
                <fullName>Taxis, Autobuses, Avión</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>