force-app/main/default/objects/Desgloce_de_Gastos__c/fields/Viatico__c.field-meta.xml
<CustomField>
    <fullName>Viatico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Viático</label>
    <referenceTo>Viaticos__c</referenceTo>
    <relationshipLabel>Desgloce de Gastos</relationshipLabel>
    <relationshipName>Desgloce_de_Gastos1</relationshipName>
    <type>Lookup</type>
</CustomField>